--- a/assets/main.css
+++ b/assets/main.css
@@ -556,6 +556,10 @@ h3{
 	border: 2px solid #f7be81;
 	background-color: #f7be81;
 }
+.skating{
+	border: 2px solid #81d8e3;
+	background-color: #81d8e3;
+}
 .college{
 	border: 2px solid #afbbab;
 	background-color: #afbbab;
