--- a/assets/main.css
+++ b/assets/main.css
@@ -12,13 +12,14 @@
 	--card-background: #e9f5f4;
 	--card-hover: #f6f6f6;
 	--body-font: Lato;
+	--display-font: Cabin;
 }
 html{
 	height: 100%;
 	scroll-behavior: smooth;
 }
 body{
-	font-family: Cabin, sans-serif;
+	font-family: var(--display-font), sans-serif;
 	font-weight: 400;
 	font-style: regular;
 	color: var(--text-color);
@@ -233,7 +234,7 @@ h3{
 }
 .site_title{
 	font-weight: 700;
-	font-size: 36px;
+	font-size: 50px;
 	color: white;  
 	overflow: hidden; /* Ensures the content is not revealed until the animation */
   	border-right: .1em solid var(--highlight-color); /* The typwriter cursor */
@@ -253,7 +254,7 @@ h3{
 } 
 
 .category_subtitle{
-	font-weight: 400;
+	font-weight: 300;
 	font-size: 20px;
 	font-family: var(--body-font), sans-serif;
 	color: white;
@@ -270,7 +271,7 @@ h3{
 	font-weight: 700;
 	white-space: nowrap;
 	font-size: 0.8em;
-	font-family: "Cabin";
+	font-family: var(--display-font);
 }
 .offset{
 	animation: offset_fade 3s infinite;
@@ -371,7 +372,7 @@ h3{
 .card_category_title{
 	font-weight: 700;
 	font-size: 18px;
-	font-family: Cabin, sans-serif;
+	font-family: var(--display-font), sans-serif;
 	color: var(--text-header-color);
 }
 .card_category_description{
@@ -797,7 +798,7 @@ h3{
 	border-radius: 7px;
 	padding: 10px;
 	font-size: 15px;
-	font-family: Cabin, sans-serif;
+	font-family: var(--display-font), sans-serif;
 	text-transform: uppercase;
 	border: 2px solid var(--highlight-color);
 	background-color: var(--highlight-color);
@@ -820,7 +821,7 @@ h3{
 	border-radius: 7px;
 	padding: 10px;
 	font-size: 15px;
-	font-family: Cabin, sans-serif;
+	font-family: var(--display-font), sans-serif;
 	text-transform: uppercase;
 	border: 2px solid var(--highlight-color);
 	background-color: white;
@@ -896,7 +897,7 @@ button:focus{
 .section_title{
 	font-weight: 700;
 	font-size: 24px;
-	font-family: Cabin, sans-serif;
+	font-family: var(--display-font), sans-serif;
 	color: var(--text-header-color);
 	padding-bottom: 15px;
 	display: flex;
