changing drop shadow

--- a/assets/main.css
+++ b/assets/main.css
@@ -189,6 +189,7 @@ h3{
 	/* padding: 40px; */
 	display: flex;
 	align-items: center;
+	border-bottom: 1px solid #e0e0e0;
 }
 .container{
 	width: 85%;
@@ -368,7 +369,9 @@ h3{
 	/* background-color: var(--card-hover); */
 	text-decoration: none;
 	top: -5px;
-	box-shadow: 0px 2px 8px rgba(184, 184, 184, 0.45);
+	/* box-shadow: 0px 2px 8px rgba(184, 184, 184, 0.45); */
+	box-shadow: 5px 5px 0px rgba(18, 201, 140, 0.35);
+	/* box-shadow: 4px 4px 0px #e0e0e0; */
 	transition: all .15s ease-in-out;
 	border:1px solid var(--highlight-color);
 }
@@ -386,7 +389,7 @@ h3{
 	/* background-color: var(--card-hover); */
 	text-decoration: none;
 	top: -5px;
-	box-shadow: 0px 2px 8px rgba(184, 184, 184, 0.45);
+	box-shadow: 5px 5px 0px rgba(18, 201, 140, 0.35);
 	transition: all .15s ease-in-out;
 	border:1px solid var(--highlight-color);
 }
