added borderBottom on scroll

--- a/assets/main.css
+++ b/assets/main.css
@@ -189,7 +189,10 @@ h3{
 	/* padding: 40px; */
 	display: flex;
 	align-items: center;
+}
+.borderBottom{
 	border-bottom: 1px solid #e0e0e0;
+
 }
 .container{
 	width: 85%;
