--- a/assets/main.css
+++ b/assets/main.css
@@ -1144,7 +1144,8 @@ header::after{
 			bottom: 100px;
 		}
 		.card_category_title{
-			font-size: 2.2rem;
+			font-size: 3rem;
+			font-weight: 300;
 		}
 		.inline_tag{
 			font-weight: 300;
@@ -1179,7 +1180,7 @@ header::after{
 			font-size: 5rem;
 		}
 		.card_category_description{
-			font-size: 1.4rem;
+			font-size: 2rem;
 		}
 		.card_description{
 			font-size: 2.2rem;
@@ -1209,7 +1210,7 @@ header::after{
 			height: 75px;
 		}
 		.card{
-			height: 800px;
+			height: 840px;
 			border-color: #8c8c8c;
 			margin-bottom: 5%;
 		}
@@ -1259,6 +1260,7 @@ header::after{
 		.card_tag{
 			font-size: 2rem;
 			/* padding: 3px; */
+			font-weight: 300;
 		}
 		.button_secondary{
 			font-size: 2rem;
