added linoleum, nomad, updated ECG

--- a/assets/main.css
+++ b/assets/main.css
@@ -579,6 +579,10 @@ h3{
 	border: 2px solid #9adb84;
 	background-color: #9adb84;
 }
+.printmaking{
+	border: 2px solid #547dcf;
+	background-color: #547dcf;
+}
 .ux{
 	border: 2px solid #859bff;
 	background-color: #859bff;
