--- a/assets/main.css
+++ b/assets/main.css
@@ -368,6 +368,20 @@ h3{
 	position: relative;
 	top: 0px;
 }
+.card_noLink{
+	border:1px solid #e0e0e0;
+	border-radius: 9px;
+	height: 450px;
+	width: 27%;
+	padding: 20px;
+	margin-bottom: 20px;
+	position: relative;
+	top: 0px;
+}
+.double{
+	width: 40%;
+	background-color: var(--card-color);
+}
 .card:hover{
 	/* background-color: var(--card-hover); */
 	text-decoration: none;
@@ -1218,6 +1232,15 @@ header::after{
 			border-color: #8c8c8c;
 			margin-bottom: 5%;
 		}
+		.card_noLink{
+			height: 840px;
+			border-color: #8c8c8c;
+			margin-bottom: 5%;
+		}
+		.double{
+			width: 100%;
+			height: 940px;
+		}
 		.card_full{
 			height: 55vh;
 			border-color: #8c8c8c;
@@ -1323,6 +1346,10 @@ header::after{
 		width: 80%;
 		font-size: 1.4rem;
 	}
+	.card_noLink{
+		width: 80%;
+		font-size: 1.4rem;
+	}
 	.width_33{
 		width: 100%;
 	}
@@ -1424,6 +1451,9 @@ header::after{
 		height: fit-content;
 	}
 		.card{
+		width: 60%;
+	}
+	.card_noLink{
 		width: 60%;
 	}
 	.container_summary{
