--- a/assets/main.css
+++ b/assets/main.css
@@ -438,6 +438,31 @@ h3{
 	margin-bottom: 20px;
 	position: relative;
 }
+.about_container_flex{
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0 auto;
+	width: 90%;
+	justify-content: center;
+	margin-bottom: 2%;
+}
+.about_flex{
+	width: 45%;
+	justify-content: center;
+}
+.about_flex_container{
+	display: flex;
+	flex-wrap: wrap;
+	/* justify-content: center; */
+}
+.about_container{
+	width: 44%;
+	font-family: var(--body-font), sans-serif;
+	background-color: var(--card-hover);
+	padding: 10px;
+	border-radius: 6px;
+	margin: 2% 2% 0 0;
+}
 /* Change card stacking on tablets and phones */
 @media only screen and (max-width: 1260px) {
 	.hero-image{
@@ -672,6 +697,9 @@ h3{
 	}
 	.parallax {
 	  background-attachment: scroll;
+	}
+	.about_container{
+		width: 100%;
 	}
   }
   .category_text{
@@ -1224,6 +1252,17 @@ header::after{
 			/* display: flex; */
 			flex-direction: column;
 		}
+		.about_container{
+			font-size: 2.4rem;
+			/* display: flex; */
+			flex-direction: column;
+		}
+		.about_flex{
+			width: 100%;
+		}
+		.about_flex_container{
+			margin-bottom:5%;
+		}
 		.content_text_no_margin{
 			font-size: 2.5rem;
 		}
@@ -1456,6 +1495,9 @@ header::after{
   }
   
   @media screen and (max-width: 900px){
+	.about_container{
+		width: 100%;
+	}
 	.halfwidth{
 		width: 100%;
 		margin-right: 30px;
