--- a/assets/main.css
+++ b/assets/main.css
@@ -710,7 +710,7 @@ h3{
 	margin-bottom: 45px !important;
 }
 .reggie{
-	font-family: 'reggie' !important;
+	font-family: 'handwriting' !important;
 }
 /* Turn off parallax scrolling for all tablets and phones */
 @media only screen and (max-device-width: 1366px) {
@@ -1249,6 +1249,7 @@ header::after{
 		}
 		.circle_step{
 			width: 10rem;
+			max-width: 80px;
 		}
 		/* .index{
 			font-size: 2rem;
