--- a/assets/main.css
+++ b/assets/main.css
@@ -876,6 +876,27 @@ h3{
 	background-color: var(--card-hover);
 	padding: 2%
 }
+.block{
+	display: block !important;
+}
+.with_hover{
+	position:relative;
+	transition: all .15s ease-in-out;
+}
+.with_hover:hover .with_hover_text{
+	display:none;
+	
+}
+.with_hover_text{
+	position: absolute;
+	right: 10px;
+	top: 10px;
+	background-color: var(--button-color);
+	color: white;
+	font-size: 1em;
+	border-radius: 6px;
+	padding: 5px;
+}
 .container_content_wrapper{
 	width: 85%;
 	max-width: 900px;
@@ -1528,6 +1549,9 @@ header::after{
 	}
 	.stay_50{
 		width: 47%;
+	}
+	.with_hover_text{
+		display:none;
 	}
   }
   
