--- a/assets/main.css
+++ b/assets/main.css
@@ -54,6 +54,7 @@
 html{
 	height: 100%;
 	scroll-behavior: smooth;
+	font-size: 14px;
 }
 body{
 	font-family: var(--display-font), sans-serif;
@@ -62,7 +63,8 @@ body{
 	color: var(--text-color);
 	margin:	0 auto;
 	/* parallax */
-	height: 100%
+	height: 100%;
+	font-size: 14px;
 }
 body:after{
 	display:none;
@@ -83,7 +85,6 @@ a:hover{
 	display: flex;
 	justify-content: space-between;
 	font-size: 1.2em;
-	
 }
 b{
 	color: var(--text-header-color);
@@ -92,6 +93,109 @@ b{
 strong{
 	font-weight: 600;
 }
+.home_container{
+	background-color: #1A1C1D;
+	margin: 0 0 50px 0;
+	/* height: 1000px;  */
+	width: 100%;
+	margin: 0 auto;
+	margin-bottom: 50px;
+	padding-top: 100px;
+	padding-bottom: 20px;
+}
+.home_text{
+	width: 80%;
+	max-width: 1000px;
+	margin: auto;
+	margin-bottom: 20px;
+	padding-top: 20px;
+}
+.h1{
+	font-size: 4rem;
+}
+.white{
+	color: white;
+}
+.text{
+	font-size: 1.2rem;
+	font-family: var(--body-font), sans-serif;
+}
+.bg_black{
+	background-color: #1A1C1D !important;
+}
+.bg_white{
+	background-color: white !important;
+}
+.dark{
+	background-color: #1A1C1D;
+	color: white !important;
+}
+.gif_container{
+	height: 800px;
+	width: 1000px;
+	background-color: #1A1C1D;
+	position: relative;
+	margin: auto;
+	overflow: hidden;
+	border-radius: 9px;
+	margin: 0 auto;
+	/* border: 6px solid #B2B2B2; */
+  }
+  .bike_container{
+	position: absolute;
+	left: 25vw;
+	width: 300px;
+	bottom: 0;
+  }
+  .layer1{
+	width: 16000px;
+	height: 100%;
+	position: absolute;
+	/* right: -14000px; */
+	/* top: 250px; */
+	animation: move1 50s linear infinite;
+  }
+  .layer2{
+	width: 24000px;
+	height: 100%;
+	position: absolute;
+	/* right: -21000px; */
+	/* top: 250px; */
+	animation: move2 50s linear infinite;
+  }
+  .layer3{
+	width: 32000px;
+	height: 100%;
+	position: absolute;
+	/* right: -28000px; */
+	/* top: 250px; */
+	animation: move3 50s linear infinite;
+  }
+  
+  @keyframes move1 {
+	0% {
+	 transform: translateX(-4000px);
+	}
+	100% { 
+	  transform: translateX(-12000px);
+	}
+  }
+  @keyframes move2 {
+	0% {
+	 transform: translateX(-6000px);
+	}
+	100% { 
+	  transform: translateX(-18000px);
+	}
+  }
+  @keyframes move3 {
+	0% {
+	 transform: translateX(-8000px);
+	}
+	100% { 
+	  transform: translateX(-24000px);
+	}
+  }
 .outerr{
 	width: 95%;
 	height: 60vh;
@@ -189,6 +293,9 @@ h3{
 	/* padding: 40px; */
 	display: flex;
 	align-items: center;
+}
+.head.dark{
+	background-color:#1A1C1D;
 }
 .borderBottom{
 	border-bottom: 1px solid #e0e0e0;
@@ -1226,6 +1333,13 @@ header::after{
 	background-position: 40px;
 		display: inline-block;	
 }
+.logo_white {
+	background: url("reginalogo-01-white.svg") no-repeat !important;
+	margin-left: 40px;
+}
+.logo_white:hover{
+	background: url("reginalogo-02-white.svg") no-repeat !important;
+}
 
 .logo:hover{
 	background: url("reginalogo-02.svg") no-repeat;
@@ -1235,6 +1349,21 @@ header::after{
   @media only screen 
 	and (max-device-width: 768px) 
 	and (-webkit-min-device-pixel-ratio: 2) { 
+		html{
+			font-size: 16px;
+		}
+		.featured{
+			max-width: none;
+		}
+		.home_container{
+			margin-top: 80px;
+		}
+		.text{
+			font-size: 2rem;
+		}
+		.h1{
+			font-size: 6rem;
+		}
 		.section_title{
 			font-size: 2.5rem;
 		}
@@ -1297,13 +1426,13 @@ header::after{
 			font-size: 2rem;
 		}
 		.card_description{
-			font-size: 2.2rem;
+			font-size: 2.4rem;
 		}
 		/* .card_description.index{
 			font-size: 1rem;
 		} */
 		.content_text{
-			font-size: 2.4rem;
+			font-size: 2.5rem;
 			/* display: flex; */
 			flex-direction: column;
 		}
@@ -1349,7 +1478,7 @@ header::after{
 			height: 940px;
 		}
 		.card_full{
-			height: 55vh;
+			height: fit-content;
 			border-color: #8c8c8c;
 			margin-bottom: 5%;
 		}
@@ -1361,6 +1490,7 @@ header::after{
 		}
 		.relative{
 			height: 20vh;
+			position: relative;
 		}
 		.card_title{
 			font-size: 3.4rem;
@@ -1375,6 +1505,8 @@ header::after{
 			font-size: 3rem;
 		}
 		.card_tag_container_relative{
+			position: absolute;
+			bottom: 5px;
 			left: 0%;
 		}
 		.button_circle{
@@ -1392,19 +1524,19 @@ header::after{
 			left: calc(50% - 60px);
 		}
 		.card_tag{
-			font-size: 2rem;
+			font-size: 2.4rem;
 			/* padding: 3px; */
 			font-weight: 300;
 		}
 		.button_secondary{
-			font-size: 2rem;
+			font-size: 2.4rem;
 			padding: 30px;
 			-webkit-appearance: button;
 			font-weight: 300;
 			/* position: absolute; */
 		}
 		.button_primary{
-			font-size: 2rem;
+			font-size: 2.4rem;
 			padding: 30px;
 			-webkit-appearance: button;
 			font-weight: 300;
@@ -1412,11 +1544,11 @@ header::after{
 		}
 		
 		.footer{
-			font-size: 2rem;
+			font-size: 2.6rem;
 			flex-wrap: wrap;
 		}
 		.summary_title{
-			font-size: 3.8rem;
+			font-size: 4rem;
 			margin-top: 40px;
 			font-weight: 300;
 		}
@@ -1424,11 +1556,12 @@ header::after{
 			font-size: 2.8rem;
 		}
 		.summary_description{
-			font-size: 30px;
-			font-size: 1.8rem;
+			/* font-size: 30px; */
+			font-size: 2.4rem;
 		}
 		.section_title{
 			font-weight: 300;
+			font-size: 3rem;
 		}
 		.parallax{
 			background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)),
