--- a/assets/main.css
+++ b/assets/main.css
@@ -127,6 +127,15 @@ strong{
 	position: absolute;
 	bottom: 10px;
 }
+.no_link{
+	position: absolute;
+	bottom: 10px;
+	z-index: 100;
+	background-color: #e0e0e0;
+	border-radius: 4px;
+	padding-left: 4px;
+	padding-right: 4px;
+}
 .fake_link:hover{
 	color: var(--highlight-darken);
 }
@@ -629,7 +638,7 @@ header{
 }
 .card_category_description{
 	font-family: var(--body-font), sans-serif;
-	font-size: 14px;
+	font-size: 15px;
 	color: var(--text-color);
 	/* color: #747474; */
 }
