--- a/assets/main.css
+++ b/assets/main.css
@@ -156,6 +156,13 @@ strong{
 	background-color: #1A1C1D;
 	color: white !important;
 }
+.case_study{
+	background-color: var(--card-color);
+	padding: 5%;
+	border-radius: 10px;
+	border: 1px solid #e0e0e0;
+	margin-bottom: 20px;
+}
 .gif_container{
 	height: 600px;
 	width: 800px;
